Add color scheme and example js

--- a/index.html
+++ b/index.html
@@ -32,9 +32,13 @@
 #68A691 Polished Pine -->
 
 <body>
-    <div class="page row">
-        <div class="my-sidebar col-3"></div>
-        <div class="my-page col-9"></div>
+    <div class="row">
+        <div class="col-3">
+            <div class="my-sidebar"></div>
+        </div>
+        <div class="col-9">
+            <div class="my-page"></div>
+        </div>
     </div>
 </body>
 
