--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
                     <div class="logo">Logo</div>
                 </div>
                 <div class="my-page col-md-9">
-                    <div id="todaysDate" class="current-date">Weekday, Date Month</div>
+                    <div class="current-date">
+                        <span id="weekday">Weekday</span>,
+                        <span id="date">Date</span>
+                        <span id="month">Month</span>
+                    </div>
                 </div>
             </div>
         </div>
