--- a/index.html
+++ b/index.html
@@ -25,22 +25,27 @@
 </head>
 
 <body>
-    <main>
-        <div class="container-fluid">
+    <div class="container-fluid">
+        <main>
             <div class="row">
                 <div class="my-sidebar col-md-3">
-                    <div class="logo">Logo</div>
+                    <div class="lists">
+                        <h2>Lists</h2>
+                    </div>
                 </div>
                 <div class="my-page col-md-9">
-                    <div class="current-date">
-                        <span id="weekday">Weekday</span>,
-                        <span id="date">Date</span>
-                        <span id="month">Month</span>
+                    <div class="header">
+                        <div class="logo">ListApp</div>
+                        <div class="current-date">
+                            <span id="weekday">Weekday</span>,
+                            <span id="date">Date</span>
+                            <span id="month">Month</span>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </main>
+        </main>
+    </div>
 </body>
 <!-- JavaScript -->
 <script type="text/javascript" src="./public/js/main.js"></script>
