Add some styling to lists area

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                     <div class="lists">
                         <h2>Lists</h2>
                     </div>
+                    <div id="todoLists">
+                        List Name
+                        <div id="todoListRemove">X</div>
+                    </div>
                 </div>
                 <div class="my-page col-md-9">
                     <div class="header">
