--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
                     </div>
                     <div id="todoLists">
                         List Name
-                        <div id="todoListRemove">X</div>
+                        <div id="todoListRemove">
+                            <button type="button" class="close" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <div class="my-page col-md-9">
@@ -45,6 +49,9 @@
                             <span id="date">Date</span>
                             <span id="month">Month</span>
                         </div>
+                    </div>
+                    <div>
+                        <div id="listWindow"></div>
                     </div>
                 </div>
             </div>
