Fix javascript for printing lists

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                         <h2>Lists</h2>
                     </div>
                     <div id="todoLists">
-                        List Name
+                        <!-- List Name
                         <div id="todoListRemove">
                             <button type="button" class="close" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="my-page col-md-9">
@@ -50,7 +50,7 @@
                             <span id="month">Month</span>
                         </div>
                     </div>
-                    <div>
+                    <div class="to-do-list">
                         <div id="listWindow"></div>
                     </div>
                 </div>
