Add ability to add to the to-do lists

--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@
                             <div id="todoItems">
                                 <!-- JavaScript HTML: -->
                                 <!-- <div class="list-item">
-                                    <p>${toDoItem.text}</p>
+                                    ${toDoItem.text}
+                                    <div id="todoItemRemove">
+                                        <button type="button" class="close" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
                                 </div> -->
                             </div>
                             <div>
