--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             </div>
                         </div> -->
                     </div>
-                    <div>
+                    <div class="input-box">
                         <input id="newListName" onkeydown="addTodoList(event)">
                         <button onclick="addTodoList(event)">Add</button>
                     </div>
@@ -64,13 +64,13 @@
                                 <!-- <div class="list-item">
                                     ${toDoItem.text}
                                     <div id="todoItemRemove">
-                                        <button type="button" class="close" aria-label="Close">
+                                        <button type="button" class="close" aria-label="Close" onclick="removeItem()">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
                                     </div>
                                 </div> -->
                             </div>
-                            <div>
+                            <div class="input-box">
                                 <input id="newListItem" onkeydown="addItem(event)">
                                 <button onclick="addItem(event)">Add</button>
                             </div>
