Add checkbox to tasks

--- a/index.html
+++ b/index.html
@@ -61,16 +61,19 @@
                     </div>
                     <div class="to-do-list">
                         <div id="listWindow">
+                            <div id="windowListName"></div>
                             <div id="todoItems">
                                 <!-- JavaScript HTML: -->
-                                <!-- <div class="list-item">
-                                    <span contenteditable="true">
-                                        ${toDoItem.text}
-                                    </span>
-                                    <div id="todoItemRemove">
-                                        <button type="button" class="close" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
+                                <!-- <div id="${toDoItem.id}">
+                                    <div class="list-item">
+                                        <span contenteditable="true">
+                                            ${toDoItem.text}
+                                        </span>
+                                        <div id="todoItemRemove">
+                                            <button type="button" class="close" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
                                     </div>
                                 </div> -->
                             </div>
