--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- <link rel="stylesheet" href="public/stylesheets/style.css"> -->
+    <link rel="stylesheet" href="public/stylesheets/style.css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -34,13 +34,13 @@
                             <h2>Lists</h2>
                         </div>
                         <ul class="task-list">
-                            <li class="active-list">School</li>
-                            <li>Work</li>
+                            <li class="list-name active-list">School</li>
+                            <li class="list-name">Work</li>
                         </ul>
 
                         <form action="">
-                            <input type="text" class="new-list" placeholder="new list name" aria-label="new list name">
-                            <button class="btn list" aria-label="create new list">+</button>
+                            <input type="text" class="new list" placeholder="new list name" aria-label="new list name">
+                            <button class="button create" aria-label="create new list">+</button>
                         </form>
                     </div>
                     <!-- <div id="todoLists"> -->
@@ -104,14 +104,14 @@
 
                         <div class="new-task-creator">
                             <form action="">
-                                <input type="text" class="new list" placeholder="new task name" aria-label="new task name">
-                                <button class="btn task" aria-label="create new task">+</button>
+                                <input type="text" class="new task" placeholder="new task name" aria-label="new task name">
+                                <button class="button create" aria-label="create new task">+</button>
                             </form>
                         </div>
 
                         <div class="delete-stuff">
-                            <button class="btn delete">Clear Completed Tasks</button>
-                            <button class="btn delete">Delete List</button>
+                            <button class="button delete">Clear Completed Tasks</button>
+                            <button class="button delete">Delete List</button>
                         </div>
                         <!-- <div>
                             <div id="windowListName"></div>
