Clean up some SCSS and add colors

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid p-0">
         <main>
-            <div class="row">
+            <div class="row no-gutters">
                 <div class="my-sidebar col-md-3">
                     <div class="all-tasks">
                         <div class="lists-h2">
