Add ability to create a task

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                         </div>
 
                         <div class="new-task-creator">
-                            <form action="">
-                                <input type="text" class="new task" placeholder="new task name" aria-label="new task name">
+                            <form action="" data-new-task-form>
+                                <input type="text" data-new-task-input class="new task" placeholder="new task name" aria-label="new task name">
                                 <button class="button create" aria-label="create new task">+</button>
                             </form>
                         </div>
@@ -99,6 +99,14 @@
             </div>
         </main>
     </div>
+    <template id="task-template">
+        <div class="task">
+            <input type="checkbox">
+            <label>
+                <span class="custom-checkbox"></span>
+            </label>
+        </div>
+    </template>
 </body>
 <!-- JavaScript -->
 <!-- <script type="text/javascript" src="./public/js/classes.js"></script> -->
