--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
                         <div class="lists-h2">
                             <h2>Lists</h2>
                         </div>
-                        <ul class="task-list" data-lists>
-                            <!-- <li class="list-name active-list">School</li>
-                            <li class="list-name">Work</li> -->
-                        </ul>
+                        <ul class="task-list" data-lists></ul>
 
                         <form action="" data-new-list-form>
                             <input type="text" class="new list" data-new-list-input placeholder="new list name" aria-label="new list name">
@@ -54,34 +51,7 @@
                         </div>
                     </div>
                     <div class="todo-body">
-                        <div class="tasks" data-tasks>
-                            <div class="task">
-                                <input type="checkbox" id="task-1">
-                                <label for="task-1">
-                                    <span class="custom-checkbox"></span>
-                                    Finish this project
-                                </label>
-                            </div>
-                            <!-- /task-1 -->
-
-                            <div class="task">
-                                <input type="checkbox" id="task-2">
-                                <label for="task-2">
-                                    <span class="custom-checkbox"></span>
-                                    Task 2
-                                </label>
-                            </div>
-                            <!-- /task-2 -->
-
-                            <div class="task">
-                                <input type="checkbox" id="task-3">
-                                <label for="task-3">
-                                    <span class="custom-checkbox"></span>
-                                    Task 3
-                                </label>
-                            </div>
-                            <!-- /task-3 -->
-                        </div>
+                        <div class="tasks" data-tasks></div>
 
                         <div class="new-task-creator">
                             <form action="" data-new-task-form>
@@ -91,7 +61,7 @@
                         </div>
 
                         <div class="delete-stuff">
-                            <button class="button delete">Clear Completed Tasks</button>
+                            <button class="button delete" data-clear-complete-tasks-button>Clear Completed Tasks</button>
                             <button class="button delete" data-delete-list-button>Delete List</button>
                         </div>
                     </div>
